--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 
 <app-banner></app-banner>
 
-<app-products></app-products>
+<!-- <app-products></app-products> -->
 
 <app-categories></app-categories>
 
