--- a/src/app/product-card/product-card.component.scss
+++ b/src/app/product-card/product-card.component.scss
@@ -131,6 +131,9 @@
           display: inline-block;
         }
       }
+      .removeFavorite a {
+        cursor: pointer;
+      } 
     }
 }
 
@@ -225,4 +228,5 @@
     }
   }
 }
+
 @import "../../css/responsive";
