finish add to favorit, remvoe from favorite-list page or from shop page

--- a/src/app/favorite-list/favorite-list.component.html
+++ b/src/app/favorite-list/favorite-list.component.html
@@ -21,7 +21,7 @@
       *ngFor="let product of products"
       [currentProduct]="product"
       [pageName] = "myPageName"
-      [allProducts] = "products"
+      [ProductsInFavoriteList] = "products"
     >
     </app-product-cart>
   </div>
