--- a/src/app/home/categories/categories.component.html
+++ b/src/app/home/categories/categories.component.html
@@ -25,7 +25,7 @@
         <div class="categories__deal__countdown">
           <span>Deal Of The Week</span>
           <h2>Multi-pocket Chest Bag Black</h2>
-          <a href="#" class="primary-btn">Shop now</a>
+          <a href="shop" class="primary-btn">Shop now</a>
         </div>
       </div>
     </div>
