--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -6,23 +6,30 @@
   >
     <ul class="product__hover">
       <li class="heart" *ngIf="pageName === 'favorite'" class="removeFavorite">
-        <a (click)="removeFromCart()">
-          <img src="assets/img/icon/heartRed.png" alt="" />
+        <a>
+          <img
+            (click)="removeFromFavorite()"
+            src="assets/img/icon/heartRed.png"
+            alt=""
+          />
           <span>Remove</span>
         </a>
       </li>
-      <li class="heart" *ngIf="pageName !== 'favorite'">
-        <a href="#">
-          <img src="assets/img/icon/heart.png" alt="" />
+      <li class="heart" *ngIf="pageName === 'shop'">
+        <a>
+          <!-- <img (click)="addToFavorite($event)" src="assets/img/icon/heart.png" alt="" /> -->
+          <img
+            (click)="ToggleFromFavoriteList()"
+            [src]="
+              isInFavorite
+                ? 'assets/img/icon/heartRed.png'
+                : 'assets/img/icon/heart.png'
+            "
+            alt=""
+          />
           <span>Favorite</span>
         </a>
       </li>
-      <!-- <li>
-        <a href="#">
-          <img src="assets/img/icon/compare.png" alt="" />
-          <span>Compare</span>
-        </a>
-      </li> -->
       <li>
         <a href="shop/details/{{ currentProduct._id }}"
           ><img src="assets/img/icon/search.png" alt="" />
