--- a/src/app/product-card/product-card.component.scss
+++ b/src/app/product-card/product-card.component.scss
@@ -131,7 +131,7 @@
           display: inline-block;
         }
       }
-      .removeFavorite a {
+      a {
         cursor: pointer;
       } 
     }
