--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -15,7 +15,7 @@
                 A specialist label creating luxury essentials. Ethically crafted
                 with an unwavering commitment to exceptional quality.
               </p>
-              <a href="#" class="primary-btn"
+              <a href="shop" class="primary-btn"
                 >Shop now <span class="arrow_right"></span
               ></a>
               <div class="hero__social">
