--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -18,6 +18,7 @@
         <app-shop-products
           class="row"
           [loadedProducts]="loadedProducts"
+          [idsInFavoriteList]="idsInFavoriteList"
         ></app-shop-products>
         <div class="row">
           <div class="col-lg-12">
