finish add to cart, remvoe from cart, change quantity

--- a/src/app/favorite-list/favorite-list.component.scss
+++ b/src/app/favorite-list/favorite-list.component.scss
@@ -51,8 +51,13 @@
     font-weight: 700;
   }
 }
+.favoriteListContainer{
+  transition: all .2s ease-in-out;
+}
+
 .favoriteList{
-  margin-top: 40px
+  margin-top: 40px;
+  transition: all .2s ease-in-out;
 }
 
 
