--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -40,7 +40,7 @@
   </div>
   <div class="product__item__text">
     <h6>{{ currentProduct.name }}</h6>
-    <a href="#" class="add-cart">+ Add To Cart</a>
+    <a (click)="ReqAddToCart()" class="add-cart">+ Add To Cart</a>
     <h5>${{ currentProduct.price }}</h5>
     <div class="product__color__select">
       <label
