--- a/src/app/shop-deatils/shop-deatils.component.html
+++ b/src/app/shop-deatils/shop-deatils.component.html
@@ -188,7 +188,7 @@
                     ></span>
                   </div>
                 </div>
-                <a href="#" class="primary-btn">add to cart</a>
+                <a (click)="addToCart()" class="primary-btn">add to cart</a>
               </div>
               <div class="product__details__btns__option">
                 <a href="#"><i class="fa fa-heart"></i> add to wishlist</a>
