--- a/src/app/shopping-cart/cart-total/cart-total.component.html
+++ b/src/app/shopping-cart/cart-total/cart-total.component.html
@@ -8,5 +8,5 @@
       Total <span>$ {{ cartTotal.total }}</span>
     </li>
   </ul>
-  <a href="" class="primary-btn">Proceed to checkout</a>
+  <a href="/checkout" (click)="moveDataToCheckout()" class="primary-btn">Proceed to checkout</a>
 </div>
