Create Admin page, get product and install dialog on edit btn

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -65,6 +65,7 @@
             <li class="active"><a href="">Home</a></li>
             <li><a href="/shop">Shop</a></li>
             <li><a href="/checkout">Check Out</a></li>
+            <li *ngIf="isAdmin"><a href="/admin">Admin</a></li>
             <!-- <li>
               <a  href="#">Pages</a>
               <ul class="dropdown">
